--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
-  <meta charset="utf-8">
-  <title>Giphy API</title>
-</head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-<body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/javascript/app.js"></script>
-  <div>
-    <button>Click me to Oauth!</button>
-  </div>
-</body>
-
+    <title>After Bootcamp Github Jobs</title>
+  </head>
+  <body>
+        <div class="container">
+        <h1>After BOOTCAMP, GitHub JOBS!</h1>
+        <div class="row">
+        <div class="col-4"><div class="card">
+        <div class="card-body">
+          JOBS
+         </div>
+        </div> <ul class="list-group" id="jobs">
+                                   <li class="list-group-item active">Job Title
+                                        <a>Company Name</a>
+                                        <p>Location</p>
+                                    </li>
+                                    <li class="list-group-item"></li>
+                                    <li class="list-group-item"></li>
+                                    <li class="list-group-item"></li>
+                                    <li class="list-group-item"></li>
+        </ul>  </div>
+        <div class="col-8">
+        <h1>job title</h1>
+        <p>description</p>
+        <a href="http://google.com">companyname</a>
+        <a href="">apply</a>
+              <!--//add url- 2 both href -->
+        </div>
+        </div>    
+        </div>
+              
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="assets/javascript/app.js"></script>
+  </body>
 </html>
