--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <div class="p-3 mb-2 bg-info text-white"></div>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <title>After Bootcamp Github Jobs</title>
@@ -17,14 +18,22 @@
           JOBS
          </div>
         </div> <ul class="list-group" id="jobs">
-                                   <li class="list-group-item active">Job Title
-                                        <a>Company Name</a>
-                                        <p>Location</p>
-                                    </li>
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
-                                    <li class="list-group-item"></li>
+                           <li class="list-group-item active">Job Title
+                            <a>Company Name</a>
+                            <p>Location</p>
+                            </li>
+                            <li class="list-group-item">Job Title
+                            <a>Company Name</a>
+                            <p>Location</p></li>
+                            <li class="list-group-item">Job Title
+                            <a>Company Name</a>
+                           <p>Location</p></li>
+                          <li class="list-group-item">Job Title
+                           <a>Company Name</a> 
+                            <p>Location</p></li>
+                             <li class="list-group-item">Job Title
+                                <a>Company Name</a>
+                                <p>Location</p></li>
         </ul>  </div>
         <div class="col-8">
         <h1>job title</h1>
