--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <div class="p-3 mb-2 bg-info text-white"></div>
+  
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <title>After Bootcamp Github Jobs Latest</title>
   </head>
   <body>
+        <div class="p-3 mb-2 bg-info text-white"></div>
+        <div class="p-3 mb-2 bg-info">
         <div class="container">
         <h1>After BOOTCAMP, GitHub JOBS!</h1>
         <div class="row">
@@ -18,7 +20,7 @@
           JOBS
          </div>
         </div> <ul class="list-group" id="jobs">
-                           <li class="list-group-item active">Job Title
+                           <li class="list-group-item">Job Title
                             <a>Company Name</a>
                             <p>Location</p>
                             </li>
@@ -36,15 +38,17 @@
                                 <p>Location</p></li>
         </ul>  </div>
         <div class="col-8">
-        <h1>job title</h1>
-        <p>description</p>
-        <a href="http://google.com">companyname</a>
-        <a href="">apply</a>
+
+        <h1 id="title">job title</h1>
+        <p id="Des">description</p>
+        <a id="Cname" href="http://google.com">companyname</a>
+        <a id="apply" href="">apply</a>
               <!--//add url- 2 both href -->
         </div>
         </div>    
         </div>
-              
+           </div>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
