--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     </style>
   </head>
   <body>
-      <div id="wrapper"> 
-      <div class="container-fluid">   
-            
+    <div id="wrapper"> 
+    <div class="container-fluid">   
     <h1>FIND CODING JOBS!</h1>
   
 
@@ -104,9 +103,9 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3Zg5J4ZdXMk4EQR45MZNCy6SWjwZEVXc&callback=initMap">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/javascript/app.js"></script>
-    <script src="assets/javascript/listitems.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   
    </div>
   </div>
