--- a/index.html
+++ b/index.html
@@ -22,13 +22,29 @@
     </style>
   </head>
   <body>
-    <div id="wrapper"> 
+    <div class="container" id="wrapper"> 
     <div class="container-fluid">   
     <h1>FIND CODING JOBS!</h1>
   
 
     <h4>What kind of job are you looking for?</h4>
-    
+    <div class="containter">
+      <div id="searchBar">
+          <script>
+              (function() {
+                var cx = '011691366441215571416:jp8-bexxany';
+                var gcse = document.createElement('script');
+                gcse.type = 'text/javascript';
+                gcse.async = true;
+                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(gcse, s);
+              })();
+            </script>
+            <gcse:search></gcse:search>
+      </div>
+      </div>
+
     <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown button
